bd-core-prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bd-prd-api
  namespace: bd-prd
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: bd-prd-api
  replicas: 0
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: bd-prd-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - mysql
                topologyKey: kubernetes.io/hostname
      containers:
        - name: bd-prd-api
          image: quay.io/bot_detector/bd-core-files:5f1aa7a
          resources:
            requests:
              cpu: 100m
              memory: 200M
          ports:
            - name: prd-api-port
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: prd-api-port
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: prd-api-port
            initialDelaySeconds: 60
            periodSeconds: 15
            successThreshold: 3
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /
              port: prd-api-port
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
