bd-core-prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bd-prd-api-ingress
  namespace: bd-prd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 1M
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1M
    nginx.ingress.kubernetes.io/global-rate-limit: '100'
    nginx.ingress.kubernetes.io/global-rate-limit-window: 1m
    nginx.ingress.kubernetes.io/global-rate-limit-key: $remote_addr
    nginx.ingress.kubernetes.io/denylist-source-range: 97.84.45.49
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.prd.osrsbotdetector.com
      secretName: api-tls
  rules:
    - host: api.prd.osrsbotdetector.com
      http:
        paths:
          - path: /v1/feedback
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
          - path: /v1/hiscore
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
          # only on v1 api
          - path: /v2/hiscore
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
          - path: /v1/label
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
          - path: /v1/player
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
          - path: /v1/prediction
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
          - path: /v1/report
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: public-api-svc
                port:
                  name: public-api-port
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bd-prd-api-service
                port:
                  name: prd-api-port
